crates/toml_edit/tests/snapshots/invalid/array/text-in-array.stderr
TOML parse error at line 3, column 3
  |
3 |   I don't belong,
  |   ^^^^^^^^^^^^^^
string values must be quoted, expected literal string
